examples/test/testpolicy7391.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7391
  namespace: namespace113
spec:
  podSelector:
    matchLabels:
      key19: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value31
          key7: value22
          key18: value26
      podSelector:
        matchLabels:
          key37: value24
          key29: value8
          key35: value3
